--- a/src/frontends/android/app/src/main/AndroidManifest.xml
+++ b/src/frontends/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="org.strongswan.android">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
@@ -17,7 +18,7 @@
         android:label="@string/app_name"
         android:theme="@style/ApplicationTheme">
         <activity
-            android:name=".LoginActivity"
+            android:name=".ui.propervpn.LoginActivity"
             android:label="@string/title_activity_login"></activity>
         <activity
             android:name=".ui.MainActivity"
@@ -141,6 +142,22 @@
                 <data android:mimeType="application/x-x509-server-cert" />
                 <data android:mimeType="application/x-pem-file" />
                 <data android:mimeType="application/pkix-cert" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.auth0.android.provider.RedirectActivity"
+            tools:node="replace">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="@string/com_auth0_domain"
+                    android:pathPrefix="/android/${applicationId}/callback"
+                    android:scheme="https" />
             </intent-filter>
         </activity>
 
